--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "ngx-pagination": "^6.0.3",
+    "ngx-search-filter": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
